[project]
name = "api-users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "django>=5.2.1",
    "django-unfold>=0.57.0",
]

[dependency-groups]
prod = [
    "gunicorn>=23.0.0",
    "mysqlclient",
]
